Fixed filter overflow problem, and photo description. Added checkout page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -24,6 +24,7 @@
   
 }
 
+
 /**************************/
 
 /* Styling for the Home page  - Jared Benitez*/
@@ -480,7 +481,8 @@
 }
 .shop-wrapper{
   margin-top:7.5vh;
-  overflow-x:hidden;
+  
+  
 }
 .shop-row{
   border-bottom:1px solid lightgrey;
